--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@
     border-radius: 10px;
    box-shadow: 1rem 7px 7px black;
     width: 375px;
+    height: 440px;
     text-align: center;
     padding: 20px;
     margin: 20px;
